* remove lots of 'dead' includes from zoran_driver.c
* change i2c client usecounting to what's used in 2.5.x (non-dynamic)
* remove DataErr from the zr36060 IRQ Mask, this autoresets the chip when
    it loses sync, which means we don't get a timeout. Much better than
    all the manual restart handling (which only worked partly).
* introduce workaround for kfree-in-munmap-handler oops

Version 0.9.2 -> 0.9.3
----------------------
* Fix missing check for channel < 0 in VIDIOCGCHAN (results in oops)

Version 0.9.1 -> 0.9.2
----------------------
* change default debug level 0 -> 1 ('display errors')
* add autodetect norm support to bt819
* fix all sort of lml33 problems
* changed zr->card into a non-pointer so its changeable per card entry
* add SECAM support to vpx3220
* add encoder=X/decoder=X insmod options to zoran.o (for varying cards
    such as the DC10old (mse3000/adv7175) and the DC30/DC30+ (vpx32xx))
* add "make release" feature to Makefile
* re-add some line that mysteriously got lost during VIDIOCGMBUF (fixes
    SIGFPE in xawtv)
* fix oops where semaphore wasn't down()'ed on v4l_fbuffer_free() -> double
    kfree() -> oops (please, use >= 2.4.20 only!)
* added linux/init.h everywhere for __devinit

Version 0.9.0 -> 0.9.1
----------------------
* Started ChangeLog
* Fixed VIDIOCGCHAN bug: it always returned the first input
* Fixed svideo channel bug in zoran.c
* Renamed SVHS to S-Video
* change initialization order for JPEG capture (DC10old/DC30)
* Add some raw I2C commands to I2C clients for more efficient block writes
* Fix up coding style in zoran.c
* standardize all dmesg output by our driver
* added a FAQ (to replace the current kernel documentation)
* added semaphores
* use pci_pci_problems instead of detecting PCI chipsets ourselves, and
    remove triton/natoma insmod options
* add a PCI device template, in preparation for moveover to new PCI subsystem
* add video_nr insmod option
* use get_zeroed_page() instead of get_free_page()