@@ -10,6 +10,7 @@ Version 0.9.3 -> 0.9.4
     it loses sync, which means we don't get a timeout. Much better than
     all the manual restart handling (which only worked partly).
 * introduce workaround for kfree-in-munmap-handler oops
+* implement support for bitmaps rather than clips for overlay
 
 Version 0.9.2 -> 0.9.3
 ----------------------
